# flowbite-htmy

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  SPECS.md  pyproject.toml
.github/workflows/: publish.yml
docs/: component-quality-standards.md  installation.md  private-registry.md  tailwind-v4-upgrade.md
examples/: accordions.py  alerts.py  avatars.py  badges.py  basic_app.py  buttons.py  cards.py  checkboxes.py  drawers.py  dropdowns.py  inputs.py  modals.py  paginations.py  radios.py  selects.py  showcase.py  showcase_types.py  tabs.py  textareas.py  toasts.py
examples/templates/: base.html.jinja  radio-layout.html.jinja  showcase-layout.html.jinja  tabs.html.jinja
specs/: htmx-dx-improvements.md
specs/001-consolidated-showcase/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-consolidated-showcase/checklists/: requirements.md
specs/001-consolidated-showcase/contracts/: routes.md
specs/001-textarea/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-textarea/checklists/: requirements.md
specs/001-textarea/contracts/: textarea-api.md
specs/002-phase-2b-radio/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-phase-2b-radio/checklists/: requirements.md
specs/002-phase-2b-radio/contracts/: radio-component.md
specs/003-toast/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-toast/checklists/: requirements.md
specs/003-toast/contracts/: toast-component.md
specs/004-component-review/: IMPROVEMENTS.md  PR-SUMMARY.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-component-review/checklists/: requirements.md
specs/004-component-review/contracts/: component-quality-checklist.md
specs/005-accordion/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-accordion/checklists/: requirements.md
specs/005-accordion/contracts/: accordion-api.md
specs/006-tabs/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-tabs/checklists/: requirements.md
specs/006-tabs/contracts/: tabs-api.md
specs/007-dropdown/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-dropdown/checklists/: requirements.md
specs/007-dropdown/contracts/: dropdown-api.md
specs/008-drawer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-drawer/checklists/: requirements.md
specs/008-drawer/contracts/: drawer-component-api.md
src/flowbite_htmy/: __init__.py  __main__.py  flowbite-htmy.js  helpers.py  htmx.py  icons.py  router.py  styles.py
src/flowbite_htmy/base/: __init__.py  classes.py  context.py
src/flowbite_htmy/components/: __init__.py  accordion.py  alert.py  avatar.py  badge.py  button.py  card.py  checkbox.py  drawer.py  dropdown.py  input.py  modal.py  pagination.py  tabs.py  (+5 more)
tests/: __init__.py  conftest.py  test_button_htmx.py  test_htmx.py  test_styles.py
tests/test_components/: test_accordion.py  test_alert.py  test_avatar.py  test_badge.py  test_button.py  test_card.py  test_checkbox.py  test_drawer.py  test_dropdown.py  test_htmx_pagination.py  test_input.py  test_input_htmx.py  test_modal.py  test_modal_shell.py  test_pagination.py  test_popup_modal.py  test_popup_modal_convenience.py  test_radio.py  test_select.py  test_select_htmx.py  test_tabs.py  test_textarea.py  test_toast.py
tests/test_layouts/: __init__.py  test_page.py
tests/test_utils/: test_style_compare.py
(+10 files in other folders)
