[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flowbite-htmy"
version = "0.1.0"
description = "Flowbite UI components for htmy - type-safe, composable, HTMX-ready"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Jian", email = "jian@example.com" }
]
keywords = [
    "flowbite",
    "htmy",
    "htmx",
    "fastapi",
    "tailwind",
    "ui-components",
    "server-side-rendering"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "htmy>=0.1.0",
]

[project.optional-dependencies]
fastapi = [
    "fasthx>=0.1.0",
    "fastapi>=0.104.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.7.0",
    "ruff>=0.1.6",
    "syrupy>=4.0.0",  # Snapshot testing
]
docs = [
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.24.0",
]
all = [
    "flowbite-htmy[fastapi,dev,docs]",
]

[project.urls]
Homepage = "https://github.com/yourusername/flowbite-htmy"
Documentation = "https://github.com/yourusername/flowbite-htmy#readme"
Repository = "https://github.com/yourusername/flowbite-htmy"
Issues = "https://github.com/yourusername/flowbite-htmy/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/flowbite_htmy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=flowbite_htmy",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "examples/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "ARG001", # unused function argument
    "ARG002", # unused method argument
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__.py
"tests/*" = ["ARG", "S"]   # Allow unused args and assert in tests

[tool.ruff.lint.isort]
known-first-party = ["flowbite_htmy"]
